Improve desktop layout by fixing alignment issues and adding new styles for improved readability

--- a/style.css
+++ b/style.css
@@ -22,10 +22,8 @@ ul {
 }
 
 .container {
-  max-width: 490px;
-  margin: 90px 40px 90px 40px;
-  display: grid;
-  /* grid-template-rows: 43% 45%; */
+  max-width: 500px;
+  margin: 50px 30px;
 }
 .container-information {
   background-color: white;
@@ -37,13 +35,13 @@ ul {
 .container-information {
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
-  padding: 45px;
+  padding: 2rem 3rem;
 }
 .container-information__title {
   color: #48556a;
   font-size: 1.7rem;
   font-weight: 700;
-  max-width: 300px;
+  max-width: 500px;
   line-height: 24px;
 }
 .container-footer {
@@ -54,7 +52,7 @@ ul {
 .container-information__lead {
   font-size: 1.5rem;
   color: #6e8098;
-  max-width: 300px;
+  max-width: 500px;
   margin: 10px 0;
   line-height: 20px;
 }
@@ -90,42 +88,41 @@ ul {
     font-size: 56.25%;
   }
   body {
-    position: relative;
+    display: grid;
+    place-items: center;
+    height: 100vh;
   }
+
   .container {
     display: grid;
-    grid-template-columns: 50% 75%;
-    justify-content: center;
-    width: 100%;
+    grid-template-columns: 2fr 3fr;
+    max-width: 730px;
+    margin:0  auto;
+  }
+  .image__container {
+    object-fit: cover;
     height: 100%;
-    max-width: 680px;
-    width: 100%;
-    position: absolute;
-    top: 50%; /* position the top  edge of the element at the middle of the parent */
-    left: 50%; /* position the left edge of the element at the middle of the parent */
-
-    transform: translate(-50%, -50%);
   }
 
   .image__container {
     border-top-right-radius: 0px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    background-color: red;
   }
   .container-information {
     border-top-right-radius: 20px;
     border-bottom-left-radius: 0px;
-    padding: 35px;
+   padding: 3.5rem 4rem 3rem 4rem;
   }
+
   .image__container {
     width: 100%;
     height: 100%;
   }
   .container-information__title {
-    font-size: 2.2rem;
+    font-size: 1.7rem;
     max-width: 389px;
-    line-height: 29px;
+    /* line-height: 29px; */
   }
   .container-information__lead {
     font-size: 1.5rem;
